@@ -45,6 +45,9 @@ namespace lsp
         status_t fetch_application_x_kde4_urilist_item(LSPString *dst, const char *protocol, io::IInStream *is, const char *charset = NULL);
         status_t fetch_application_x_kde4_urilist_item(LSPString *dst, const char *protocol, io::IInSequence *is);
         status_t fetch_application_x_kde4_urilist_item(LSPString *dst, const char *protocol, const void *src, size_t bytes, const char *charset = NULL);
+
+        status_t fetch_win_filenamew(LSPString *dst, const char *protocol, const void *src, size_t bytes);
+        status_t fetch_win_filenamea(LSPString *dst, const char *protocol, const void *src, size_t bytes);
     }
 }
 
