@@ -5,6 +5,7 @@
 === 1.0.4 ===
 * Added support of modern C++ 11 standard and above.
 * Updated build scripts.
+* Added more formats for URLSink (Windows support).
 
 === 1.0.3 ===
 * Added Window::has_parent() method to check that window is embedded into another window.
